Agregar componentes y vistas iniciales para la aplicación de gestión de usuarios y rutas
Adds initial user and route management views

Implements core components and authentication logic for user and route management.
Integrates Pinia for state handling and Supabase for backend data.
Removes boilerplate content and sets up a dashboard, login, client registration, route management, and client listing views.
Improves user experience with protected routing and session restoration.

Adds initial user and route management views with auth

Integrates Pinia for state management and Supabase for backend data access.
Implements authentication, protected routing, session restoration, and main dashboard flow.
Replaces boilerplate with user login, dashboard, client registration, route management, and client listing views.
Enhances user experience and prepares structure for further app development.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.57.4",
+    "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
+    "pinia": "^3.0.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
